syntax = "proto3";

package user;
option go_package = "github.com/Geawn/Ms_E-commerce_BE/user-service/proto";

service UserService {
  rpc GetCurrentUser (GetCurrentUserRequest) returns (GetCurrentUserResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

message GetCurrentUserRequest {
  string user_id = 1;
}

message GetCurrentUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
}

message CreateUserResponse {
  uint64 user_id = 1;
  bool success = 2;
  string error = 3;
}

message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  Avatar avatar = 5;
}

message Avatar {
  string url = 1;
  string alt = 2;
} 